@startuml

title __CONFIG's Class Diagram__\n

  namespace  {
    namespace ompany18.mctank {
      namespace config {
        class company18.mctank.config.ItemFilterConfig {
            ~ filter()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace config {
        class company18.mctank.config.MvcConfig {
            + addInterceptors()
            + addResourceHandlers()
            + addViewControllers()
            + userAvailabilityInterceptor()
        }
      }
    }
  }
  

  namespace  {
    namespace ompany18.mctank {
      namespace config {
        class company18.mctank.config.MvcSecurityConfig {
            # configure()
        }
      }
    }
  }
  

  company18.mctank.config.MvcConfig .up.|> org.springframework.web.servlet.config.annotation.WebMvcConfigurer
  company18.mctank.config.MvcConfig o-- company18.mctank.service.CustomerService : customerService
  company18.mctank.config.MvcSecurityConfig -up-|> org.salespointframework.SalespointSecurityConfiguration


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
